--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://65.2.80.212:9000/</sonar.host.url>
-                <sonar.login>admin</sonar.login>
-		<sonar.password>passw0rd</sonar.password>
+		<sonar.host.url>http://ec2-3-128-246-106.us-east-2.compute.amazonaws.com:9000/</sonar.host.url>
+                <sonar.login>4ceed437452aa3b01f5f92d7106523d2bcba7992</sonar.login>
+		<!-- <sonar.password>passw0rd</sonar.password> -->
              
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
